blog header change and alignment fix

--- a/app/code/FoxChapel/NewsFeed/view/frontend/web/css/source/_module.less
+++ b/app/code/FoxChapel/NewsFeed/view/frontend/web/css/source/_module.less
@@ -112,10 +112,11 @@
 
 
     h2.posts {
-        text-transform: uppercase;
         font-size: 30px;
         letter-spacing: 1px;
         margin: 0 auto 50px;
+        text-transform: uppercase;
+        text-align: center;
     }
 
     body {
